The notifications container is now a flex container with a fixed gap. The profile pictures have a border-radius of 50%. The name divs have a fixed top-padding, no wrapping and a custom font property.

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,21 @@ header {
     border-radius: 5px;
 }
 
+.notifications {
+    display: flex;
+    gap: .5vw;
+}
+
+.profile-picture {
+    width: 50%;
+    border-radius: 50%;
+}
+
+.name {
+   padding-top: 1.5vh;
+   white-space: nowrap;
+   font: normal 500 1.5rem 'Robot', sans-serif;
+}
 
 .search div,
 .notifications div,
